packages/jsts/tests/dbd/benchmark/TypeError/T01 Cannot read properties of undefined/T01-15/reproducer.js
const foo = require('./reproducer-dep');
foo(undefined);
